@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.5.2
-Date: 2020-09-02
+Date: 2020-09-03
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
@@ -51,7 +51,7 @@ Suggests:
     BB,
     expm,
     matrixcalc
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Encoding: UTF-8
 NeedsCompilation: yes
 VignetteBuilder: R.rsp
