@@ -2,7 +2,7 @@ context("examples")
 
 test_that("all examples work correctly",{
   
-  expect_error(devtools::run_examples(run=TRUE),NA)
+  expect_error(devtools::run_examples(run_dontrun = TRUE),NA)
   
   unlink(paste0("Rplots",1:46,".pdf"))
 })
