@@ -1,4 +1,4 @@
-momentuHMM 1.5.2 2020-09-02
+momentuHMM 1.5.2 2020-09-03
 -----------------
 NEW FEATURES
 
@@ -11,6 +11,10 @@ CHANGES
 * the following packages have been moved to 'Suggests' and are now used conditionally: BB, conicfit, dplyr, expm, ggmap, ggplot2, lubridate, magrittr, matrixcalc, raster, and scatterplot3d. If any of these are packages needed, users will be prompted to install.
 
 * suppress 'Unknown or uninitialised column' warning in crawlWrap when obsData is an sf object
+
+* removed SANN optimization when using retryFits in crawlWrap
+
+* reduced worker memory pressure in crawlWrap when retryParallel=TRUE
 
 BUG FIXES
 
